# navi-agent

./: .gitignore  README.md  README.zh-CN.md  config.example.yaml  pyproject.toml
data/eval/: README.md  ifeval_seed.jsonl  tool_use_seed.jsonl
design/: context-engine-compression.md  runtime-error-strategy.md
design/arch/: current-architecture.drawio  current-architecture.md
evals/: __init__.py  inspect_tool_use.py
src/navi_agent/: __init__.py  banner.py  bash_command.py  bootstrap.py  cli.py  cli_input.py  doctor.py  errors.py  events.py  healthcheck.py  logging.py  paths.py  scheduler.py  smoke.py  tooling.py  ui_events.py
tests/: test_bootstrap.py  test_build_application.py  test_cli.py  test_cli_input.py  test_doctor.py  test_errors.py  test_events.py  test_healthcheck.py  test_logging.py  test_paths.py  test_scheduler.py  test_smoke.py  test_ui_events.py
tests/app/: test_interaction_resume.py  test_service.py
tests/config/: test_langfuse_settings.py  test_settings.py
tests/evolution/: test_background_review.py  test_eval_case_store.py  test_evaluator.py  test_evidence.py  test_ifeval.py  test_jsonl_store.py  test_memory_review.py  test_prompt_overlay.py  test_report.py  test_review.py  test_review_run.py  test_review_trigger.py  test_seed.py  test_seed_report.py  test_skill_curator.py  test_skill_provenance.py  test_skill_review.py  test_skill_review_agent.py  test_skill_usage.py  test_skills.py  test_tool_use.py  test_tool_use_import.py  test_workflow.py  test_workflow_sample_store.py
tests/external_eval/: test_inspect_tool_use.py
(+207 files in other folders)
