[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navi-agent"
version = "0.1.0"
description = "A self-improving agent inspired by Hermes Agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0.0",
    "PyYAML>=6.0.0",
]

[project.scripts]
navi-agent = "navi_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/navi_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
